# MetalFFT

./: CMakeLists.txt  MetalFFTAction.cpp  MetalFFTAction.h  README.md  accessors.cpp  action.h  fft1d.cpp  generator.h  lifetime.cpp  lock.h  metalFFT.cpp  metalFFT.h  metalFFT_common.h  plan.cpp  plan.h  repo.cpp  repo.h  transform.cpp  unicode.compatibility.h
Metal/: CMakeLists.txt  MetalCompute.h  MetalCompute.mm  MetalComputeKernel.h  MetalComputeKernel.mm  MetalComputeKernelWrapper.h  MetalComputeKernelWrapper.mm  MetalComputeWrapper.h  MetalComputeWrapper.mm  MetalDevice.h  MetalDevice.mm  MetalDeviceWrapper.h  MetalDeviceWrapper.mm  Result.h
fft1d_sample/: CMakeLists.txt  fft1d.cpp
